# T0VE-Firmware-Host-Monorepo

./: .gitignore  README.md
T0VE Common/: genproto.py  genproto.py - README.md  readme.md
T0VE Host Software/: Proto-Host.lnk  conda_env.yaml  pyproject.toml
T0VE Host Software/T0VE_State_Communicator/: T0VE_State_Communicator_Main.py  __init__.py  tsc_dispatcher.py
T0VE Host Software/device_interface/: host_device_serial.py  host_device_state_serdes.py
T0VE Host Software/host_application/: host_device_serial.py  host_device_state_serdes.py  state_proto_defs.py  state_proto_node_default.py  ui_dict_to_tkinter.py  ui_dict_viewer_backend.py  ui_dict_viewer_frontend.py  ui_pubsub_widget_base.py  ui_pubsub_widget_bool.py  ui_pubsub_widget_entry.py  ui_pubsub_widget_enum.py  ui_pubsub_widget_factory.py  ui_pubsub_widget_list.py  util_pubsub_dict.py
T0VE Host Software/host_application_drivers/: host_device_serial.py  host_device_state_serdes.py  state_proto_defs.py  state_proto_node_default.py  ui_dict_viewer_aggregator.py  ui_dict_viewer_frontend.py  ui_dict_viewer_module.py  ui_pubsub_widget_base.py  ui_pubsub_widget_bool.py  ui_pubsub_widget_entry.py  ui_pubsub_widget_enum.py  ui_pubsub_widget_factory.py  ui_pubsub_widget_list.py  ui_scrollable_frame.py  ui_scrollable_textbox.py  util_flat_dict.py  util_match_type_runtime.py
T0VE Host Software/t0ve_host_software.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
T0VE Host Software/testing/: dict_viewer_test.py  run_state_serdes.py  scroll_textbox_tester.py  test_file_request.py  test_host_serial.py
(+240 files in other folders)
